# tierlist-maker

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: main.yml
src/: App.tsx  ClickToEditField.tsx  CustomSensor.tsx  DialogAddNew.tsx  DialogDeleteItem.tsx  DialogDeleteTier.tsx  DialogEdit.tsx  DialogItemView.tsx  FileSrcUtil.tsx  ItemUpdate.tsx  Pool.css  Pool.tsx  Tierlist.css  Tierlist.tsx  TierlistData.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sql/: 01_cleanup.sql  02_schema.sql
src-tauri/src/: db.rs  lib.rs  main.rs  scraping.rs  tierlist.rs
