[package]
name = "tierlist-maker"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "devtools"] }
image = "0.24.5"
scraper = "0.14.0"
reqwest = { version = "0.11.13", features = ["gzip"] }
tokio = { version = "1.23.0", features = ["macros"] }
tempdir = "0.3.7"
url = "2.3.1"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio-stream = "0.1.11"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
